# statistics-with-python

./: hello.py  pyproject.toml
notebooks/: 01_random_variables_expected_value_var_std.ipynb
